Trade Protectorates can declare wars onto other Tributaries/Trade protectorates of the same overlord without involving them. The overlord can protect them if they are attacked, but may refuse, which does not break the relationship. They may diplomatically declare their independence at any time, at the cost of Icon stability.png−1 stability. They may also fight an independence war, but the AI will never do this. They are not automatically called into the wars of their overlord. They can however be called to arms like any ally when declaring a war, including with the promise of land. An AI controlled Trade protectorate always answers such calls if their opinion is at least +100, regardless of favours or claims on provinces, and will never accept otherwise. Calling a Trade Protectorate to Arms will reduce their opinion by −100 which decays at a rate of +5 yearly. They can also be called to wars after the war has been declared or if a war was declared onto their overlord, but only with the "Call trade protectorate to war" action under the Influence tab. This action is only possible if the Protectorate is not at war and has a positive opinion of their overlord, but will be denied by the AI if the opinion isn't at least 50. They receive the opinion malus of −100 and then join all active wars. The opinion malus is reduced to −50 if they are only called into defensive wars.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -145,12 +145,12 @@ block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
-unit.jp-Curbork.name = [#590e14]Cu[#500c12]rb[#470b10]o[#3e090e]rk[#35080c]s
-unit.jp-Curbork.description = Low health air unit that is excellent at sabotaging enemies supply line. Fires bullet that recoils the shooter and extra damage to buildings.
+unit.jp-Saboteur.name = [#590e14]Sa[#500c12]bo[#470b10]te[#3e090e]u[#35080c]r
+unit.jp-Saboteur.description = Low health air unit that is excellent at sabotaging enemies supply line. Fires bullet that recoils the shooter and extra damage to buildings.
 unit.jp-Slasher.name = [#590e14]Sl[#500c12]a[#470b10]s[#3e090e]h[#35080c]er
 unit.jp-Slasher.description = Launchs missiles that deals heavy area damage.
-unit.jp-Sinrak.name = [#590e14]Si[#500c12]n[#470b10]r[#3e090e]a[#35080c]k
-unit.jp-Sinrak.description = Armored air unit that buffs and heal nearby allies. Fires a stream of low damage bullet at enemies.
+unit.jp-Protectorate.name = [#590e14]Pr[#500c12]ote[#470b10]cto[#3e090e]ra[#35080c]te
+unit.jp-Protectorate.description = Armored air unit that buffs and heal nearby allies. Fires a stream of low damage bullet at enemies.
 unit.jp-Gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
 unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
