Motivation drained, tomorrow.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -147,6 +147,7 @@ block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable mater
 #units
 unit.jp-Saboteur.name = [#590e14]Sa[#500c12]bo[#470b10]te[#3e090e]u[#35080c]r
 unit.jp-Saboteur.description = Low health air unit that is excellent at sabotaging enemies supply line. Fires bullet that recoils the shooter and extra damage to buildings.
+unit.jp-Saboteir.details = IMPOSTER AMONG US IMPOSTER AMOGUS AAAAAAAAAAAAAAA.
 unit.jp-Slasher.name = [#590e14]Sl[#500c12]a[#470b10]s[#3e090e]h[#35080c]er
 unit.jp-Slasher.description = Launchs missiles that deals heavy area damage.
 unit.jp-Protectorate.name = [#590e14]Pr[#500c12]ote[#470b10]cto[#3e090e]ra[#35080c]te
