--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -145,6 +145,8 @@ block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
+unit.jp-Spawner.name = [#590e14]Egg[#500c12]s[#470b10]l[#3e090e]a[#35080c]yer
+unit.jp-Spawner.description = Drops cluster of bombs on ground enemies, Occasionally Drop an egg that give birth to a bug if not destroyed in time. Spawns 4 bug on death.
 unit.jp-Saboteur.name = [#590e14]Sa[#500c12]bo[#470b10]te[#3e090e]u[#35080c]r
 unit.jp-Saboteur.description = Low health air unit that is excellent at sabotaging enemies supply line. Fires bullet that recoils the shooter and extra damage to buildings.
 unit.jp-Saboteur.details = IMPOSTER AMONG US IMPOSTER AMOGUS AAAAAAAAAAAAAAA.
