--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -230,10 +230,17 @@ sector.jp-Dig.name = Dig site
 sector.jp-Dig.description = A resource rich area with a new type of ore detected on the this sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
 sector.jp-DigHM.name = Dig site
 sector.jp-DigHM.description = A resource rich area with a strange ore detected on the this sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
-sector.jp-Bird.name = Birth
-sector.jp-Bird.description = A new born alien colony is in this sector, eradicate them before they grow too far.
+sector.jp-Birth.name = Birth
+sector.jp-Birth.description = A new alien colony have been detected in this area, destroy the base and research their technology.
+sector.jp-BirthHM.name = Birth
+sector.jp-BirthHM.description = A new alien colony have been detected in this area, destroy the base and research their technology.
+sector.jp-Magma.name = Magma
+sector.jp-Magma.description = A new type of ore have been detected in this sector, investigate and eradicate.
+sector.jp-MagmaHM.name = Magma
+sector.jp-MagmaHM.description = A new type of ore have been detected in this sector, investigate and eradicate.
 sector.jp-Frost.name = Frosted
 sector.jp-Frost.description = One of the tier 5 unit production sector, with barebone defenses. After the alien invasion, this place have become a resting place for one of the alien, Frost.
-sector.jp-Walled.name = Aslamka
-sector.jp-Walled.description = Rare Overworldly resources along with alien creatures have been detected in this area, research and eradicate whoever stand in your way.
+sector.jp-FrostHM.name = Frosted
+sector.jp-FrostHM.description = One of the tier 5 unit production sector, with barebone defenses. After the alien invasion, this place have become a resting place for one of the alien, Frost.
+
 #end sectors
