update multicraft to 1.8, im sure we wold need it somehow

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -226,6 +226,8 @@ sector.jp-Ski.name = Above the skies
 sector.jp-Ski.description = One of the former power storage sector, reduced to ruin by the crux. Recently an explosion have been detected through the radar, this sector is suspected to be the origin of it.
 sector.jp-SkiHM.name = Above the skies
 sector.jp-SkiHM.description = One of the former power storage sector, reduced to ruin by the crux. Recently an explosion have been detected through the radar, this sector is suspected to be the origin of it.
+sector.jp-Biomass.name = Biomass Synthesis Facility
+sector.jp-Biomass.description = The origin of spores. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility's demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
 sector.jp-Dig.name = Dig site
 sector.jp-Dig.description = A resource rich area with a new type of ore detected on the this sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
 sector.jp-DigHM.name = Dig site
