--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -148,7 +148,7 @@ block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable mater
 unit.jp-Spitter.name = [#590e14]Sp[#500c12]i[#470b10]t[#3e090e]t[#35080c]er
 unit.jp-Spitter.description = Rapidly spits neoplasm at enemies, do not let them go near your water pumps.
 unit.jp-Carrier.name = [#590e14]Ca[#500c12]r[#470b10]r[#3e090e]i[#35080c]er
-unit.jp-Carrier.description = Drops cluster of bombs on ground enemies, Occasionally Drop an egg that give birth to a bug if not destroyed in time. Spawns 4 bug on death.
+unit.jp-Carrier.description = Drops cluster of bombs on ground enemies, Occasionally Drop an egg that give birth to a bug if not destroyed in time. Spawns 2 bugs on death.
 unit.jp-Saboteur.name = [#590e14]Sa[#500c12]bo[#470b10]te[#3e090e]u[#35080c]r
 unit.jp-Saboteur.description = Low health air unit that is excellent at sabotaging enemies supply line. Fires bullet that recoils the shooter and extra damage to buildings.
 unit.jp-Saboteur.details = IMPOSTER AMONG US IMPOSTER AMOGUS AAAAAAAAAAAAAAA.
