--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -209,7 +209,7 @@ unit.jp-Purger.name = [#A865C9]Purger
 unit.jp-Purger.description = Use biomass to burn everything in its path.
 unit.jp-Purger.details = Peace is not an option but Arson is.
 unit.jp-Basilisk.name = [#A865C9]Basilisk
-unit.jp-Basilisk.description = An almost unkillable beast with high healing power, good thing it's expensive to make
+unit.jp-Basilisk.description = A giant tank with mini gun on its side to knocks units back.
 unit.jp-Harvester.name = [#A865C9]Harvester
 unit.jp-Harvester.description = Harvest things, unlike drone it cannot defend itself.
 unit.jp-Bomb.name = [#A865C9]Missiles
