--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -99,8 +99,6 @@ block.jp-SIC.description = The ultimate alien weapon designed for the invasion o
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
 block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.[grey] Require Biomass to use, its range is reduced in exchange for high damage.
 block.jp-Impalercannon.details = Use something to protect them, theyre weak.
-block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
-block.jp-Artilleryturret.description = A long range turret like hail that shots biomass at enemies.
 block.jp-Sentinel.name = [#A865C9]Sentinel
 block.jp-Sentinel.description = Fires high damage single target laser at enemy target.Ignores armor.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
@@ -117,7 +115,7 @@ block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
 block.jp-Synapse-tower.description = Create Small Flying units.
 block.jp-Synapse-tower.details = Very swarmy floaty factory.
 block.jp-Oarch.name = [#A865C9]Oarch
-block.jp-Oarch.description = Shoot exploding biomass that deal splash damage and slow the enemies down.
+block.jp-Oarch.description = A support turret made to stall the enemies, can either slow or knockback them.
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
 block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
 block.jp-Sporegarrison.name = [#A865C9]Spore garrison
