--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -173,7 +173,7 @@ unit.jp-Zeta.name = [#A865C9]Zeta
 unit.jp-Zeta.description = Wait the unit is hidden, how are you seeing this?
 unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-HiveSentinel.description = A Flying Living creature that protect their hive at all cost.
-unit.jp-HiveSentiel.details = There is a record of it killing people, please be careful.
+unit.jp-HiveSentinel.details = There is a record of it killing people, please be careful.
 unit.jp-Sporophage.name = [#A865C9]Sporophage
 unit.jp-Sporophage.description = An advanced Hive defender with a built in meltdown, very dangerous.
 unit.jp-Sporophage.details = Basically Hive Sentiel II.
@@ -218,6 +218,8 @@ unit.jp-Gorgon.name = [#A865C9]Gorgon Battleship
 unit.jp-Gorgon.description = It's a WALKING battleship from Starcraft 2
 unit.jp-Frost.name = [#23dbde]Fr[#23c0de]ost
 unit.jp-Frost.description = Evolved autus that can tolerate the harsh cold of the mountains, this creatures live on the coldest area of the planet, isolate themselves from the rest of the swarm.
+unit.jp-FrostC.name = [#23dbde]Fr[#23c0de]ost
+unit.jp-FrostC.description = ...?
 #end units
 #sectors
 sector.jp-Ski.name = Above the skies
