Changes to grammar and stuff

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -47,14 +47,14 @@ item.jp-Zinc.description = Raw zinc. What else do you expect from it? Its just z
 block.jp-Tile.name = [#A865C9]Dark floor
 block.jp-Wall.name = [#A865C9]Dark wall
 block.jp-Fluoresiltile.name = [#23DBDE]Fluoresilt
-block.jp-Silt-moss.name = [#A865C9]Fluromoss 
+block.jp-Silt-moss.name = [#A865C9]Fluromoss
 block.jp-Silt.name = [#A865C9]Vanadium sand
 block.jp-Blackboulder.name = [#A865C9]Dark boulder
 #End environment
 
 #liquids
 liquid.jp-placeholder.name = PLACEHOLDER
-liquid.jp-placeholder.description = PLACE HOLDER FOR FUTURE CONTENT.
+liquid.jp-placeholder.description = PLACEHOLDER FOR FUTURE CONTENT.
 #end liquids
 #blocks
 block.jp-ZincExtractor.name = [#A865C9]Zinc Extractor
@@ -159,7 +159,7 @@ unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
 unit.jp-Thera.description = Flying unit that Launchs missile at enemies.
 unit.jp-Imp.name = [#590e14]I[#500c12]m[#470b10]p
-unit.jp-Imp.description = A self destruct unit that fly off once it attacked or get killed in battle.
+unit.jp-Imp.description = A self-destruct unit that fly off once it attacked or get killed in battle.
 unit.jp-DeathImp.name = [#590e14]Rein[#500c12]car[#470b10]nat[#3e090e]ion
 unit.jp-DeathImp.description = Floating body of the imp, can attack for one more time.
 unit.jp-Carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
@@ -175,7 +175,7 @@ unit.jp-HiveSentinel.name = [#A865C9]Hive Sentinel
 unit.jp-HiveSentinel.description = A Flying Living creature that protect their hive at all cost.
 unit.jp-HiveSentinel.details = There is a record of it killing people, please be careful.
 unit.jp-Sporophage.name = [#A865C9]Sporophage
-unit.jp-Sporophage.description = An advanced Hive defender with a built in meltdown, very dangerous.
+unit.jp-Sporophage.description = An advanced Hive defender with a built-in meltdown, very dangerous.
 unit.jp-Sporophage.details = Basically Hive Sentiel II.
 unit.jp-Roach.name = [#A865C9]Roach
 unit.jp-Roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
@@ -223,15 +223,15 @@ unit.jp-FrostC.description = ...?
 #end units
 #sectors
 sector.jp-Ski.name = Above the skies
-sector.jp-Ski.description = One of the former power storage sector, reduced to ruin by the crux. Recently an explosion have been detected through the radar, this sector is suspected to be the origin of it.
+sector.jp-Ski.description = An old, heavily infected power storage of the crux, recently we have detected some strange object falling into our planet, this is one of the sector with those strange object. Eradicate all opposition and conduct further research.
 sector.jp-SkiHM.name = Above the skies
-sector.jp-SkiHM.description = One of the former power storage sector, reduced to ruin by the crux. Recently an explosion have been detected through the radar, this sector is suspected to be the origin of it.
+sector.jp-SkiHM.description = An old, heavily infected power storage of the crux, recently we have detected some strange object falling into our planet, this is one of the sector with those strange object. Eradicate all opposition and conduct further research.
 sector.jp-Biomass.name = Biomass Synthesis Facility
 sector.jp-Biomass.description = The origin of spores. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility's demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
 sector.jp-Dig.name = Dig site
-sector.jp-Dig.description = A resource rich area with a new type of ore detected on the this sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
+sector.jp-Dig.description = A resource rich area with a new type of ore detected on the sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
 sector.jp-DigHM.name = Dig site
-sector.jp-DigHM.description = A resource rich area with a strange ore detected on the this sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
+sector.jp-DigHM.description = A resource rich area with a strange ore detected on the sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
 sector.jp-Birth.name = Birth
 sector.jp-Birth.description = A new alien colony have been detected in this area, destroy the base and research their technology.
 sector.jp-BirthHM.name = Birth
