I have forgor to forgor to remember to forgor

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -244,5 +244,9 @@ sector.jp-Frost.name = Frosted
 sector.jp-Frost.description = One of the tier 5 unit production sector, with barebone defenses. After the alien invasion, this place have become a resting place for one of the alien, Frost.
 sector.jp-FrostHM.name = Frosted
 sector.jp-FrostHM.description = One of the tier 5 unit production sector, with barebone defenses. After the alien invasion, this place have become a resting place for one of the alien, Frost.
-
 #end sectors
+#settings
+jpsettings = Spore Biomechs Settings
+setting.jp-HM.name = Hardmode
+#end settings
+
