--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -247,6 +247,6 @@ sector.jp-FrostHM.description = One of the tier 5 unit production sector, with b
 #end sectors
 #settings
 jpsettings = Spore Biomechs Settings
-setting.jp-HM.name = Hardmode
+setting.HM.name = Hardmode
 #end settings
 
