--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -248,5 +248,6 @@ sector.jp-FrostHM.description = One of the tier 5 unit production sector, with b
 #settings
 jpsettings = Spore Biomechs Settings
 setting.HM.name = Hardmode
+setting.HM.description = Warnings, Restart the game after you switch modes.
 #end settings
 
