Good god glorious *dies from grammar mistakes*

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -15,7 +15,7 @@ item.jp-Biomass.name = [#8B73C7]Biomass
 item.jp-Biomass.description = A material created from mixing spore pod together. Used in most zerggy buildings.
 item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait who eat it anyway?
 item.jp-BioSil.name = [#45368F]BioSil
-item.jp-BioSil.description = A alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
+item.jp-BioSil.description = AN alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
 item.jp-BioSil.details = "What if we mix silicon and biomass together?" They said... and so they did, it was a big success.
 item.jp-Carbine-composite.name =[#45368F]Carbine composite
 item.jp-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used as building material and fuel.
@@ -36,7 +36,7 @@ item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
 item.jp-VCA.description = Made from mixing Spore pod and Vanadium at very high tempeture, Used in making wall.
 item.jp-Voltaicgas.name = [#45368F]Voltaic gas
 item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used as fuel.
-item.jp-Voltaicgas.details = They said its a gas but are they really a gas?
+item.jp-Voltaicgas.details = They said it's a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
 item.jp-Zinc.description = Raw zinc. What else do you expect from it? Its just zinc
 
@@ -73,7 +73,7 @@ block.jp-Hive.name = [#A865C9]Hive
 block.jp-Hive.description = Core of the base. Stores even more resource.
 block.jp-Nydusaecore.name = [#A865C9]Nydusae Core
 block.jp-Nydusaecore.description = Core of the base. The biggest one.
-block.jp-Nydusaecore.details = Seriously what do you expect from it, its just a bigger core
+block.jp-Nydusaecore.details = Seriously what do you expect from it, it's just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
 block.jp-Harvester_bay.name = [#A865C9]Harvester bay
@@ -98,7 +98,7 @@ block.jp-SIC.name = [yellow]Imperial [#A865C9]Railgun
 block.jp-SIC.description = The ultimate alien weapon designed for the invasion of serpulo.
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
 block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.[grey] Require Biomass to use, its range is reduced in exchange for high damage.
-block.jp-Impalercannon.details = Use something to protect them, theyre weak.
+block.jp-Impalercannon.details = Use something to protect them, they're weak.
 block.jp-Sentinel.name = [#A865C9]Sentinel
 block.jp-Sentinel.description = Fires high damage single target laser at enemy target.Ignores armor.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
@@ -110,7 +110,7 @@ block.jp-Pool.description = create small zerg units.
 block.jp-Pool.details = Very swarmy factory.
 block.jp-Assembler.name = [#A865C9]Assembler
 block.jp-Assembler.description = Create Bigger Zerg units.
-block.jp-Assembler.details = The Biggest Factory Got Infested by the Zerg, Create the biggest units youve ever seen in your life.
+block.jp-Assembler.details = The Biggest Factory Got Infested by the Zerg, Create the biggest units you've ever seen in your life.
 block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
 block.jp-Synapse-tower.description = Create Small Flying units.
 block.jp-Synapse-tower.details = Very swarmy floaty factory.
@@ -181,7 +181,7 @@ unit.jp-Roach.name = [#A865C9]Roach
 unit.jp-Roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
 unit.jp-Zergling.name = [#A865C9]Zergling
 unit.jp-Zergling.description = A small Zerg unit, strong in swarm.
-unit.jp-Zergling.details = The second zerg units created (Drone are the first one), it seem to be the weakest combat units alone but are the strongest in swarm.
+unit.jp-Zergling.details = The second zerg units created (Drone are the first one), it seems to be the weakest combat units alone but are the strongest in swarm.
 unit.jp-Raptor.name = [#A865C9]Raptor
 unit.jp-Raptor.description = Elite zerglings, faster stronger and have wings!
 unit.jp-Interceptor.name = [#A865C9]Interceptor
@@ -191,15 +191,15 @@ unit.jp-Guardian.description = A long range Zerg that capable of sniping small e
 unit.jp-Breacher.name = [#A865C9]Breacher
 unit.jp-Breacher.description = A machine of destruction, capable of destroy everything stand in its path.
 unit.jp-Drone.name = [#A865C9]Drone
-unit.jp-Drone.description = A flying drone that collect resources and wont fight back when attacked, [grey]Unless controlled by player.
-unit.jp-Drone.details = The first zerg ever created (and no, larva doesnt count), made to working for the swarm and sometime even fight.
+unit.jp-Drone.description = A flying drone that collect resources and won't fight back when attacked, [grey]Unless controlled by player.
+unit.jp-Drone.details = The first zerg ever created (and no, larva doesn't count), made to working for the swarm and sometime even fight.
 unit.jp-Baneling.name = [#A865C9]Baneling
 unit.jp-Baneling.description = A suicide fighter, Deal heavy damage upon death.
 unit.jp-Behomoth.name = [#A865C9]Behomoth
 unit.jp-Behomoth.description = A [#f0]GIANT [white]behomoth.
 unit.jp-Behomoth.details = The lobber may or may not be op depending on the enemy crowd control.
 unit.jp-Scarabid.name = [#A865C9]Scarabid
-unit.jp-Scarabid.description = A walking long range spider that have area damage and long range, perfect for mid game combat, too bad it cant hit air.
+unit.jp-Scarabid.description = A walking long range spider that have area damage and long range, perfect for mid-game combat, too bad it cant hit air.
 unit.jp-Scarabid.details = A walking ripple.
 unit.jp-Rizomorph.name = [#A865C9]Rizomorph
 unit.jp-Rizomorph.description = A flying zerg that shoots exploding spore seed.
@@ -217,7 +217,7 @@ unit.jp-Lobber.description = A small swarmy units created by behomoth to annoy e
 unit.jp-Gorgon.name = [#A865C9]Gorgon Battleship
 unit.jp-Gorgon.description = It's a WALKING battleship from Starcraft 2
 unit.jp-Frost.name = [#23dbde]Fr[#23c0de]ost
-unit.jp-Frost.description = Evolved autus that can tolerate the harsh cold of the mountains, this creatures live on the coldest area of the planet, isolate themselves from the rest of the swarm.
+unit.jp-Frost.description = Evolved autus that can tolerate the harsh cold of the mountains, this creature live on the coldest area of the planet, isolate themselves from the rest of the swarm.
 unit.jp-FrostC.name = [#23dbde]Fr[#23c0de]ost
 unit.jp-FrostC.description = ...?
 #end units
@@ -229,9 +229,9 @@ sector.jp-SkiHM.description = An old, heavily infected power storage of the crux
 sector.jp-Biomass.name = Biomass Synthesis Facility
 sector.jp-Biomass.description = The origin of spores. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility's demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
 sector.jp-Dig.name = Dig site
-sector.jp-Dig.description = A resource rich area with a new type of ore detected on the sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
+sector.jp-Dig.description = One of our many mining sites, reduced to ruins after the great war, normally we won't care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
 sector.jp-DigHM.name = Dig site
-sector.jp-DigHM.description = A resource rich area with a strange ore detected on the sector. Reclaim the old mining equipment and eradicate the alien wandering on this sector.
+sector.jp-DigHM.description = One of our many mining sites, reduced to ruins after the great war, normally we won't care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
 sector.jp-Birth.name = Birth
 sector.jp-Birth.description = A new alien colony have been detected in this area, destroy the base and research their technology.
 sector.jp-BirthHM.name = Birth
