--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,11 +29,11 @@ item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [
 item.jp-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
 item.jp-Neocells.name = [#590e14]Neocell
 item.jp-Neocells.description = Stabilized neoplasm contained inside a cell, flammable and may explode if not handled correctly. Used to create neoplastic structure and units.
-item.jp-Neocells.details = It would be worse if the neoplasm inside get relased...
+item.jp-Neocells.details = It would be worse if the neoplasm inside get released...
 item.jp-Vanadium.name = [#485767]Vanadium
 item.jp-Vanadium.description = Raw vanadium, can be used for production of other refined material.
 item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
-item.jp-VCA.description = Made from mixing Spore pod and Vanadium at very high tempeture, Used in making wall.
+item.jp-VCA.description = Made from mixing Spore pod and Vanadium at very high temperature, Used in making wall.
 item.jp-Voltaicgas.name = [#45368F]Voltaic gas
 item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used as fuel.
 item.jp-Voltaicgas.details = They said it's a gas but are they really a gas?
@@ -53,26 +53,26 @@ block.jp-Blackboulder.name = [#A865C9]Dark boulder
 #End environment
 
 #liquids
-liquid.jp-placeholder.name = PLACEHOLDER
-liquid.jp-placeholder.description = PLACEHOLDER FOR FUTURE CONTENT.
+liquid.jp-liquidSpore.name = Liquid spore
+liquid.jp-liquidSpore.description = Very acidic liquid that is stored inside baneling, effective at destroying small units.
 #end liquids
 #blocks
+block.jp-Sporecore.name = [#A865C9]Hatchery
+block.jp-Sporecore.description = Core of the zerg base. Stores more resource than a shard core.
+block.jp-Hive.name = [#A865C9]Hive
+block.jp-Hive.description = Core of the zerg base, Decently armored and stores even more resource.
+block.jp-Nydusaecore.name = [#A865C9]Nydusae Core
+block.jp-Nydusaecore.description = Core of the zerg base. Very tough, stores alot of resources. Also is the biggest one.
 block.jp-ZincExtractor.name = [#A865C9]Zinc Extractor
 block.jp-ZincExtractor.description = Extracts zinc from underground, require biomass to operate.
 block.jp-Vanadicarbide.name = [#A865C9]Vanadicarbide Alloyer
 block.jp-Vanadicarbide.description = Make Vanadium carbide alloy by mixing spore pod and vanadium. Generates heat
 block.jp-Vanadiumcarbidewall.name = [#485767]Vanadium Carbide Wall
-block.jp-Vanadiumcarbidewall.description = An immortal wall, made to withstand the test of time. Can last almost forever against group of enemies.
+block.jp-Vanadiumcarbidewall.description = Protect structures from enemies projectiles.
 block.jp-Zincextractor.name = [#A865C9]Zinc extractor
 block.jp-Zincextractor.description = Extract zinc from zinc ore, don't ask why its currently not working.
-block.jp-Sporecore.name = [#A865C9]Hatchery
-block.jp-Sporecore.description = Core of the base. Stores more resource than a shard core.
 block.jp-Neostabilizer.name = [#A865C9]Neostabilizer
 block.jp-Neostabilizer.description = Stores neoplasm into a cell that can be used for later.
-block.jp-Hive.name = [#A865C9]Hive
-block.jp-Hive.description = Core of the base. Stores even more resource.
-block.jp-Nydusaecore.name = [#A865C9]Nydusae Core
-block.jp-Nydusaecore.description = Core of the base. The biggest one.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, it's just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
@@ -83,7 +83,7 @@ block.jp-ApollyonAssembler.description = Create BIG units.
 block.jp-Naniteinfuser.name = [#A865C9]Nanite infuser
 block.jp-Naniteinfuser.description = Create Nanite alloys by mixing [#add8e6]Titanium, [#301934]Spore pod and [#666b6c]Silicon [white]together.
 block.jp-Neocell-generator.name = [#A865C9]Neocell generator
-block.jp-Neocell-generator.description = Turns neoplasm into... energy.
+block.jp-Neocell-generator.description = Turns neoplasm into... energy?
 block.jp-BioSynthesizer.name = [#A865C9]Bio Synthesizer
 block.jp-BioSynthesizer.description = Turn Graphite, Silicon and Biomass into unstable alloy.
 block.jp-Voltaicchamber.name = [#A865C9]Voltaic Chamber
@@ -115,20 +115,20 @@ block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
 block.jp-Synapse-tower.description = Create Small Flying units.
 block.jp-Synapse-tower.details = Very swarmy floaty factory.
 block.jp-Oarch.name = [#A865C9]Oarch
-block.jp-Oarch.description = A support turret made to stall the enemies, can either slow or knockback them.
+block.jp-Oarch.description = A support turret made to stall the enemies, can either slow or knock back them.
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
 block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
 block.jp-Sporegarrison.name = [#A865C9]Spore garrison
 block.jp-Sporegarrison.description = A smaller Flak accelerator, use power instead of resource
 block.jp-Biomassreactor.name = [#A865C9]Biomass reactor
-block.jp-Biomassreactor.description = Funny looking impact reator, due to Biomass is in both liquid state and solid state while burning, it is used to feed reator, make less power than impact reactor but have more hp.
+block.jp-Biomassreactor.description = Funny looking impact reactor, due to Biomass is in both liquid state and solid state while burning, it is used to feed reactor, make less power than impact reactor but have more hp.
 block.jp-Biomassreactor.details = May or may not explode when destroyed.
 block.jp-Suppressor.name = [#A865C9]Suppressor
-block.jp-Suppressor.description = A Medium sized minigun that designed to kill Medium health units
+block.jp-Suppressor.description = A Medium sized mini gun that designed to kill Medium health units
 block.jp-Masscultivator.name = [#A865C9]Mass cultivator
 block.jp-Masscultivator.description = A Giant cultivator that uses power to make spore.
 block.jp-Lotus-panel.name = [#A865C9]Lotus panel
-block.jp-Lotus-panel.description = Generate Power from the sun, even more efficent than the normal one.
+block.jp-Lotus-panel.description = Generate Power from the sun, even more efficient than the normal one.
 block.jp-Oil-burner.name = [#A865C9]Oil Generator
 block.jp-Oil-burner.description = Generates power by burning oil.
 block.jp-Voltatic-burner.name = [#A865C9]Voltatic Generator
@@ -157,13 +157,13 @@ unit.jp-Protectorate.description = Armored air unit that buffs and heal nearby a
 unit.jp-Gragoth.name = [#590e14]Gr[#500c12]a[#470b10]g[#3e090e]o[#35080c]th
 unit.jp-Gragoth.description = Shoot piercing orb at enemies.
 unit.jp-Thera.name = [#590e14]T[#500c12]h[#470b10]e[#3e090e]r[#35080c]a
-unit.jp-Thera.description = Flying unit that Launchs missile at enemies.
+unit.jp-Thera.description = Flying unit that Launches missile at enemies.
 unit.jp-Imp.name = [#590e14]I[#500c12]m[#470b10]p
 unit.jp-Imp.description = A self-destruct unit that fly off once it attacked or get killed in battle.
 unit.jp-DeathImp.name = [#590e14]Rein[#500c12]car[#470b10]nat[#3e090e]ion
 unit.jp-DeathImp.description = Floating body of the imp, can attack for one more time.
 unit.jp-Carci.name = [#590e14]C[#500c12]a[#470b10]r[#3e090e]c[#35080c]i
-unit.jp-Carci.description = A ranged area attacker which deal devasting damage to enemies, cannot attack air units.
+unit.jp-Carci.description = A ranged area attacker which deal devastating damage to enemies, cannot attack air units.
 unit.jp-Autus.name = [#590e14]A[#500c12]u[#470b10]t[#3e090e]u[#35080c]s
 unit.jp-Autus.description = Heavy armored zerg, decreases damage taken while attacking.
 unit.jp-Autus.details = Imagine a mace, yes a mace. Now imagine them on cocaine with pierce and 1000 dps.
@@ -176,14 +176,14 @@ unit.jp-HiveSentinel.description = A Flying Living creature that protect their h
 unit.jp-HiveSentinel.details = There is a record of it killing people, please be careful.
 unit.jp-Sporophage.name = [#A865C9]Sporophage
 unit.jp-Sporophage.description = An advanced Hive defender with a built-in meltdown, very dangerous.
-unit.jp-Sporophage.details = Basically Hive Sentiel II.
+unit.jp-Sporophage.details = Basically Hive Sentinel II.
 unit.jp-Roach.name = [#A865C9]Roach
 unit.jp-Roach.description = Fire long-range artillery at enemy ground target. Dissolves enemies with its bullet.
 unit.jp-Zergling.name = [#A865C9]Zergling
 unit.jp-Zergling.description = A small Zerg unit, strong in swarm.
 unit.jp-Zergling.details = The second zerg units created (Drone are the first one), it seems to be the weakest combat units alone but are the strongest in swarm.
 unit.jp-Raptor.name = [#A865C9]Raptor
-unit.jp-Raptor.description = Elite zerglings, faster stronger and have wings!
+unit.jp-Raptor.description = Elite zergling, better, faster, stronger and have wings!
 unit.jp-Interceptor.name = [#A865C9]Interceptor
 unit.jp-Interceptor.description = A small plane that capable of distract nearby enemy.
 unit.jp-Guardian.name = [#A865C9]Guardian
