--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -214,8 +214,9 @@ unit.jp-Bomb.name = [#A865C9]Missiles
 unit.jp-Bomb.description = Once again, why and how are you reading this.
 unit.jp-Lobber.name = [#A865C9]Lobber
 unit.jp-Lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
-unit.jp-Gorgon.name = [#A865C9]Gorgon Battleship
-unit.jp-Gorgon.description = It's a WALKING battleship from Starcraft 2
+unit.jp-Gorgon.name = [#A865C9]Gorgon
+unit.jp-Gorgon.description = Fires a massive continuous laser at enemies. may cause arson.
+unit.jp-Gorgon.details = It's a walking battleship from the hit game starcocaine 2
 unit.jp-Frost.name = [#23dbde]Fr[#23c0de]ost
 unit.jp-Frost.description = Evolved autus that can tolerate the harsh cold of the mountains, this creature live on the coldest area of the planet, isolate themselves from the rest of the swarm.
 unit.jp-FrostC.name = [#23dbde]Fr[#23c0de]ost
