It's givin birth time

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -234,9 +234,9 @@ sector.jp-Dig.description = One of our many mining sites, reduced to ruins after
 sector.jp-DigHM.name = Dig site
 sector.jp-DigHM.description = One of our many mining sites, reduced to ruins after the great war, normally we won't care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
 sector.jp-Birth.name = Birth
-sector.jp-Birth.description = A new alien colony have been detected in this area, destroy the base and research their technology.
+sector.jp-Birth.description = Sightings of Actual Alien base have been detected on this sector, we have must eradicate them before they completely overrun the sector. Becareful and try to not wake them up too early, make sure that your attack eradicate the core.
 sector.jp-BirthHM.name = Birth
-sector.jp-BirthHM.description = A new alien colony have been detected in this area, destroy the base and research their technology.
+sector.jp-BirthHM.description = Sightings of Actual Alien base have been detected on this sector, we have must eradicate them before they completely overrun the sector. Becareful and try to not wake them up too early, make sure that your attack eradicate the core.
 sector.jp-Magma.name = Magma
 sector.jp-Magma.description = A new type of ore have been detected in this sector, investigate and eradicate.
 sector.jp-MagmaHM.name = Magma
