--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -143,6 +143,8 @@ block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
 block.jp-Fluoresilt-refinery.description =  Refines fluoresilt into usable material.
 #end blocks
 #units
+unit.jp-Demolisher.name = [#590e14]De[#500c12]mo[#470b10]li[#3e090e]sh[#35080c]er
+unit.jp-Demolisher.description = A heavy unit used for sieging bases, deal extremely high damage to buildings.
 unit.jp-Spitter.name = [#590e14]Sp[#500c12]i[#470b10]t[#3e090e]t[#35080c]er
 unit.jp-Spitter.description = Rapidly spits neoplasm at enemies, do not let them go near your water pumps.
 unit.jp-Carrier.name = [#590e14]Ca[#500c12]r[#470b10]r[#3e090e]i[#35080c]er
