When the grammar strike again

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -251,6 +251,6 @@ sector.jp-FrostHM.description = One of the tier 5 unit production sector, with b
 #settings
 jpsettings = Spore Biomechs Settings
 setting.HM.name = Hardmode
-setting.HM.description = Warnings, Restart the game after you switch modes.
+setting.HM.description = Please restart the game after you switch to or out of hardmode.
 #end settings
 
