--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -72,7 +72,7 @@ block.jp-Vanadiumcarbidewall.description = Protect structures from enemies proje
 block.jp-Zincextractor.name = [#A865C9]Zinc extractor
 block.jp-Zincextractor.description = Extract zinc from zinc ore, don't ask why its currently not working.
 block.jp-Neostabilizer.name = [#A865C9]Neostabilizer
-block.jp-Neostabilizer.description = Stores neoplasm into a cell that can be used for later.
+block.jp-Neostabilizer.description = Stores neoplasm into a cell for later uses.
 block.jp-Nydusaecore.details = Seriously what do you expect from it, it's just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
@@ -83,7 +83,7 @@ block.jp-ApollyonAssembler.description = Create BIG units.
 block.jp-Naniteinfuser.name = [#A865C9]Nanite infuser
 block.jp-Naniteinfuser.description = Create Nanite alloys by mixing [#add8e6]Titanium, [#301934]Spore pod and [#666b6c]Silicon [white]together.
 block.jp-Neocell-generator.name = [#A865C9]Neocell generator
-block.jp-Neocell-generator.description = Turns neoplasm into... energy?
+block.jp-Neocell-generator.description = Generates power by burning... neoplasm?
 block.jp-BioSynthesizer.name = [#A865C9]Bio Synthesizer
 block.jp-BioSynthesizer.description = Turn Graphite, Silicon and Biomass into unstable alloy.
 block.jp-Voltaicchamber.name = [#A865C9]Voltaic Chamber
