--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -15,11 +15,11 @@ item.jp-Biomass.name = [#8B73C7]Biomass
 item.jp-Biomass.description = A material created from mixing spore pod together. Used in most zerggy buildings.
 item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait who eat it anyway?
 item.jp-BioSil.name = [#45368F]BioSil
-item.jp-BioSil.description = AN alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
+item.jp-BioSil.description = An alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
 item.jp-BioSil.details = "What if we mix silicon and biomass together?" They said... and so they did, it was a big success.
 item.jp-Carbine-composite.name =[#45368F]Carbine composite
 item.jp-Carbine-composite.description = Made by mixing biosili, nanite and mineral together. Used as building material and fuel.
-item.jp-Carbine-composite.details = THE GREGTECH, IT'S REAL
+item.jp-Carbine-composite.details = THE GREGTECH, IT\u0027S REAL
 item.jp-Fluoresilt.name = [#23DBDE]Fluoresilt
 item.jp-Fluoresilt.description = Used for production of other refined material.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
@@ -36,7 +36,7 @@ item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
 item.jp-VCA.description = Made from mixing Spore pod and Vanadium at very high temperature, Used in making wall.
 item.jp-Voltaicgas.name = [#45368F]Voltaic gas
 item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used as fuel.
-item.jp-Voltaicgas.details = They said it's a gas but are they really a gas?
+item.jp-Voltaicgas.details = They said it\u0027s a gas but are they really a gas?
 item.jp-Zinc.name = [#747474]Zinc
 item.jp-Zinc.description = Raw zinc. What else do you expect from it? Its just zinc
 
@@ -70,10 +70,10 @@ block.jp-Vanadicarbide.description = Make Vanadium carbide alloy by mixing spore
 block.jp-Vanadiumcarbidewall.name = [#485767]Vanadium Carbide Wall
 block.jp-Vanadiumcarbidewall.description = Protect structures from enemies projectiles.
 block.jp-Zincextractor.name = [#A865C9]Zinc extractor
-block.jp-Zincextractor.description = Extract zinc from zinc ore, don't ask why its currently not working.
+block.jp-Zincextractor.description = Extract zinc from zinc ore.
 block.jp-Neostabilizer.name = [#A865C9]Neostabilizer
 block.jp-Neostabilizer.description = Stores neoplasm into a cell for later uses.
-block.jp-Nydusaecore.details = Seriously what do you expect from it, it's just a bigger core
+block.jp-Nydusaecore.details = Seriously what do you expect from it, it\u0027s just a bigger core
 block.jp-Nanoprocessor.name = [#A865C9]Biomass Processor
 block.jp-Nanoprocessor.description = Create Biomass from Spore pod.
 block.jp-Harvester_bay.name = [#A865C9]Harvester bay
@@ -98,19 +98,19 @@ block.jp-SIC.name = [yellow]Imperial [#A865C9]Railgun
 block.jp-SIC.description = The ultimate alien weapon designed for the invasion of serpulo.
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
 block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.[grey] Require Biomass to use, its range is reduced in exchange for high damage.
-block.jp-Impalercannon.details = Use something to protect them, they're weak.
+block.jp-Impalercannon.details = Use something to protect them, they\u0027re weak.
 block.jp-Sentinel.name = [#A865C9]Sentinel
 block.jp-Sentinel.description = Fires high damage single target laser at enemy target.Ignores armor.
 block.jp-Artilleryturret.name = [#A865C9]Artillery Turret
 block.jp-Artilleryturret.description = A long range turret that shoots anti armor bullet at enemies.
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
-block.jp-Mitocannon.description = An upgraded spore garrison.
+block.jp-Mitocannon.description = An upgraded Spore Garrison.
 block.jp-Pool.name = [#A865C9]Incubator
 block.jp-Pool.description = create small zerg units.
 block.jp-Pool.details = Very swarmy factory.
 block.jp-Assembler.name = [#A865C9]Assembler
 block.jp-Assembler.description = Create Bigger Zerg units.
-block.jp-Assembler.details = The Biggest Factory Got Infested by the Zerg, Create the biggest units you've ever seen in your life.
+block.jp-Assembler.details = The Biggest Factory Got Infested by the Zerg, Create the biggest units you\u0027ve ever seen in your life.
 block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
 block.jp-Synapse-tower.description = Create Small Flying units.
 block.jp-Synapse-tower.details = Very swarmy floaty factory.
@@ -193,8 +193,8 @@ unit.jp-Guardian.description = A long range Zerg that capable of sniping small e
 unit.jp-Breacher.name = [#A865C9]Breacher
 unit.jp-Breacher.description = A machine of destruction, capable of destroy everything stand in its path.
 unit.jp-Drone.name = [#A865C9]Drone
-unit.jp-Drone.description = A flying drone that collect resources and won't fight back when attacked, [grey]Unless controlled by player.
-unit.jp-Drone.details = The first zerg ever created (and no, larva doesn't count), made to working for the swarm and sometime even fight.
+unit.jp-Drone.description = A flying drone that collect resources and won\u0027t fight back when attacked, [grey]Unless controlled by player.
+unit.jp-Drone.details = The first zerg ever created (and no, larva doesn\u0027t count), made to working for the swarm and sometime even fight.
 unit.jp-Baneling.name = [#A865C9]Baneling
 unit.jp-Baneling.description = A suicide fighter, Deal heavy damage upon death.
 unit.jp-Behomoth.name = [#A865C9]Behomoth
@@ -218,7 +218,7 @@ unit.jp-Lobber.name = [#A865C9]Lobber
 unit.jp-Lobber.description = A small swarmy units created by behomoth to annoy enemies and drain their ammo [#f0]Don't underestimate those little guys.
 unit.jp-Gorgon.name = [#A865C9]Gorgon
 unit.jp-Gorgon.description = Fires a massive continuous laser at enemies. may cause arson.
-unit.jp-Gorgon.details = It's a walking battleship from the hit game starcocaine 2
+unit.jp-Gorgon.details = It\u0027s a walking battleship from the hit game starcocaine 2
 unit.jp-Frost.name = [#23dbde]Fr[#23c0de]ost
 unit.jp-Frost.description = Evolved autus that can tolerate the harsh cold of the mountains, this creature live on the coldest area of the planet, isolate themselves from the rest of the swarm.
 unit.jp-FrostC.name = [#23dbde]Fr[#23c0de]ost
@@ -230,13 +230,13 @@ sector.jp-Ski.description = An old, heavily infected power storage of the crux, 
 sector.jp-SkiHM.name = Above the skies
 sector.jp-SkiHM.description = An old, heavily infected power storage of the crux, recently we have detected some strange object falling into our planet, this is one of the sector with those strange object. Eradicate all opposition and conduct further research.
 sector.jp-Biomass.name = Biomass Synthesis Facility
-sector.jp-Biomass.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility's demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
+sector.jp-Biomass.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility\u0027s demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
 sector.jp-BiomassHM.name = Biomass Synthesis Facility
-sector.jp-BiomassHM.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility's demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
+sector.jp-BiomassHM.description = The origin of spores... On Serpulo at least. This is the facility in which they were researched and initially produced.\nResearch the technology contained within. Cultivate spores for the production of fuel and plastics.\n\n[lightgray]Upon this facility\u0027s demise, the spores were released. Nothing in the local ecosystem could compete with such an invasive organism. \n...Some unusual activies have been detected on this sector.
 sector.jp-Dig.name = Dig site
-sector.jp-Dig.description = One of our many mining sites, reduced to ruins after the great war, normally we won't care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
+sector.jp-Dig.description = One of our many mining sites, reduced to ruins after the great war, normally we won\u0027t care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
 sector.jp-DigHM.name = Dig site
-sector.jp-DigHM.description = One of our many mining sites, reduced to ruins after the great war, normally we won't care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
+sector.jp-DigHM.description = One of our many mining sites, reduced to ruins after the great war, normally we won\u0027t care about those mining site but... An object that seem to be related to the recent sighting has landed on this sector. We need you to land on this sector to research the alien object.
 sector.jp-Birth.name = Birth
 sector.jp-Birth.description = Sightings of Actual Alien base have been detected on this sector, we have must eradicate them before they completely overrun the sector. Becareful and try to not wake them up too early, make sure that your attack eradicate the core.
 sector.jp-BirthHM.name = Birth
