me on my way to break every single one of my map like a sigma male

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -13,7 +13,7 @@ item.jp-Azurite.name = [#245485]Azurite
 item.jp-Azurite.description = Raw Azurite. The purest one.
 item.jp-Biomass.name = [#8B73C7]Biomass
 item.jp-Biomass.description = A material created from mixing spore pod together. Used in most zerggy buildings.
-item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait who eat it anyway?
+item.jp-Biomass.details = Extremely dangerous if consumed, x5 the dose of normal spore pod. Wait, who eat it anyway?
 item.jp-BioSil.name = [#45368F]BioSil
 item.jp-BioSil.description = An alloy made from graphite, silicon and biomass, used to make more advanced material and buildings.
 item.jp-BioSil.details = "What if we mix silicon and biomass together?" They said... and so they did, it was a big success.
@@ -23,7 +23,7 @@ item.jp-Carbine-composite.details = THE GREGTECH, IT\u0027S REAL
 item.jp-Fluoresilt.name = [#23DBDE]Fluoresilt
 item.jp-Fluoresilt.description = Used for production of other refined material.
 item.jp-Fluorite.name = [#23DBDE]Fluorite
-item.jp-Fluorite.description = Glow stick.
+item.jp-Fluorite.description = Glowstick.
 item.jp-Nanitealloy.name = [#45368F]Nanite alloy
 item.jp-Nanitealloy.description = Created from mixing [#8B73C7]Biomass[white], [#45368F]Biosil [white]and [grey]Silicon [white]together. Used as an advanced building material.
 item.jp-Nanitealloy.details =  [#f0]Highly unstable, please use with caution, lack of carefulness may lead to explosion or fire hazard.
@@ -33,7 +33,7 @@ item.jp-Neocells.details = It would be worse if the neoplasm inside get released
 item.jp-Vanadium.name = [#485767]Vanadium
 item.jp-Vanadium.description = Raw vanadium, can be used for production of other refined material.
 item.jp-VCA.name = [#303a45]Vanadium Carbide alloy
-item.jp-VCA.description = Made from mixing Spore pod and Vanadium at very high temperature, Used in making wall.
+item.jp-VCA.description = Very tough alloy, made from mixing Spore pod and Vanadium at high temperature, Used in making wall and as ammo.
 item.jp-Voltaicgas.name = [#45368F]Voltaic gas
 item.jp-Voltaicgas.description = A solid gas made by mixing [#301934]Spore Pod [white]and [blue]water [white]together. Used as fuel.
 item.jp-Voltaicgas.details = They said it\u0027s a gas but are they really a gas?
@@ -97,7 +97,7 @@ block.jp-Item-pipe.details = pro tip: mix slag and oil together to enable sandbo
 block.jp-SIC.name = [yellow]Imperial [#A865C9]Railgun
 block.jp-SIC.description = The ultimate alien weapon designed for the invasion of serpulo.
 block.jp-Impalercannon.name = [#A865C9]Impaler Cannon
-block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.[grey] Require Biomass to use, its range is reduced in exchange for high damage.
+block.jp-Impalercannon.description = A Giant cannon designed for destroying big units.
 block.jp-Impalercannon.details = Use something to protect them, they\u0027re weak.
 block.jp-Sentinel.name = [#A865C9]Sentinel
 block.jp-Sentinel.description = Fires high damage single target laser at enemy target.Ignores armor.
@@ -106,37 +106,37 @@ block.jp-Artilleryturret.description = A long range turret that shoots anti armo
 block.jp-Mitocannon.name = [#A865C9]Mitocannon
 block.jp-Mitocannon.description = An upgraded Spore Garrison.
 block.jp-Pool.name = [#A865C9]Incubator
-block.jp-Pool.description = create small zerg units.
-block.jp-Pool.details = Very swarmy factory.
+block.jp-Pool.description = Produces small ground zerg unit.
+block.jp-Pool.details = Purger may or may not be overpowered.
 block.jp-Assembler.name = [#A865C9]Assembler
-block.jp-Assembler.description = Create Bigger Zerg units.
-block.jp-Assembler.details = The Biggest Factory Got Infested by the Zerg, Create the biggest units you\u0027ve ever seen in your life.
+block.jp-Assembler.description = Produces big zerg unit, both ground and air included.
+block.jp-Assembler.details = May or may not be balanced.
 block.jp-Synapse-tower.name = [#A865C9]Synapse Tower
-block.jp-Synapse-tower.description = Create Small Flying units.
-block.jp-Synapse-tower.details = Very swarmy floaty factory.
+block.jp-Synapse-tower.description = Produces small flying zerg unit.
+block.jp-Synapse-tower.details = Flying unit may or may not be complete garbage.
 block.jp-Oarch.name = [#A865C9]Oarch
-block.jp-Oarch.description = A support turret made to stall the enemies, can either slow or knock back them.
+block.jp-Oarch.description = Fires bullets that make the enemies slower or outright stunning them.
 block.jp-Flakaccelerator.name = [#A865C9]Flak accelerator
 block.jp-Flakaccelerator.description = Shoots frag bullet at air enemies! Have more range than your normal Scatter.
 block.jp-Sporegarrison.name = [#A865C9]Spore garrison
-block.jp-Sporegarrison.description = A smaller Flak accelerator, use power instead of resource
+block.jp-Sporegarrison.description = Fires bullet using electricity.
 block.jp-Biomassreactor.name = [#A865C9]Biomass reactor
 block.jp-Biomassreactor.description = Funny looking impact reactor, due to Biomass is in both liquid state and solid state while burning, it is used to feed reactor, make less power than impact reactor but have more hp.
 block.jp-Biomassreactor.details = May or may not explode when destroyed.
 block.jp-Suppressor.name = [#A865C9]Suppressor
-block.jp-Suppressor.description = A Medium sized mini gun that designed to kill Medium health units
+block.jp-Suppressor.description = Rapidly fire bullet at both air and ground enemies.
 block.jp-Masscultivator.name = [#A865C9]Mass cultivator
-block.jp-Masscultivator.description = A Giant cultivator that uses power to make spore.
+block.jp-Masscultivator.description = A more efficient (and more expensive) version of cultivator.
 block.jp-Lotus-panel.name = [#A865C9]Lotus panel
-block.jp-Lotus-panel.description = Generate Power from the sun, even more efficient than the normal one.
+block.jp-Lotus-panel.description = Generate Power from the sun, even more efficient than the non-zerg version.
 block.jp-Oil-burner.name = [#A865C9]Oil Generator
 block.jp-Oil-burner.description = Generates power by burning oil.
 block.jp-Voltatic-burner.name = [#A865C9]Voltatic Generator
 block.jp-Voltatic-burner.description = Burns Voltatic gas to generates power.
 block.jp-AcidifierModule.name = [#A865C9]Acidifier Module
-block.jp-AcidifierModule.description = Allow you to create units with apollyon assembler
+block.jp-AcidifierModule.description = Increases Apollyon Assembler tier when placed next to it.
 block.jp-Extractor.name = [#A865C9]Extractor
-block.jp-Extractor.description = Only can mine certain ore, but cheap.
+block.jp-Extractor.description = Only can mine certain ore, but faster than regular 2x2 drill.
 block.jp-Gestator.name = [#590e14]Gestator
 block.jp-Gestator.description = Creates neoplasm unit.
 block.jp-Fluoresilt-refinery.name = [#23DBDE]Fluoresilt refinery
