--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,9 +1,11 @@
 #status
 
-status.jp-Dissolving.name = [#A865C9]Dissolving
-status.jp-Dissolving.description = Mr hydro, I don't feel so good
-status.jp-Frostshield.name = [#23dbde]Frostshield
-status.jp-Frostshield.description = WHY WON'T YOU FUCKING DIE!? \nStatus effect son.
+status.jp-dissolving.name = [#A865C9]Dissolving
+status.jp-dissolving.description = Mr hydro, I don\u0027t feel so good
+status.jp-frostshield.name = [#23dbde]Frostshield
+status.jp-frostshield.description = WHY WON\u0027T YOU FUCKING DIE!? \nStatus effect son.
+status.jp-stunned.name = [yellow]Stunned
+status.jp-stunned.description = Disallows movement of said unit.
 
 #end status
 
