when will you work

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -254,7 +254,7 @@ sector.jp-FrostHM.description = One of the tier 5 unit production sector, with b
 #end sectors
 #settings
 jpsettings = Spore Biomechs Settings
-setting.HM.name = Hardmode
-setting.HM.description = Please restart the game after you switch to or out of hardmode.
+setting.HM.name = Hardmode (Needs restart)
+setting.HM.description = Makes all spore biomechs campaign map harder, also changes some vanilla campaign map.
 #end settings
 
