--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -255,6 +255,6 @@ sector.jp-FrostHM.description = One of the tier 5 unit production sector, with b
 #settings
 jpsettings = Spore Biomechs Settings
 setting.HM.name = Hardmode (Needs restart)
-setting.HM.description = Makes all spore biomechs campaign map harder, also changes some vanilla campaign map.
+setting.HM.description = Makes all spore biomech campaign map harder, also changes some vanilla campaign map.
 #end settings
 
